<resources>
    <string name="app_name">Focus</string>
    <string name="toolbar_menu_refresh">Refresh</string>
    <string name="toolbar_menu_logout">Log out</string>
    <string name="toolbar_menu_sync_to_calendar">Sync</string>
    <string name="toolbar_menu_delete_saved_assignments">Reset course</string>
    <string name="portal_label">Portal</string>
    <string name="schedule_label">Schedule</string>
    <string name="calendar_label">Calendar</string>
    <string name="demographic_label">Demographic</string>
    <string name="address_label">Contacts</string>
    <string name="referrals_label">Referrals</string>
    <string name="absences_label">Absences</string>
    <string name="final_grades_label">Final Grades &amp; GPA</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_demographic">Demographic</string>
    <string name="nav_address">Contacts</string>
    <string name="nav_referrals">Referrals</string>
    <string name="nav_absences">Absences</string>
    <string name="nav_final_grades">Final Grades and GPA</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="debug_username">debug</string>
    <string name="debug_password">debug</string>
    <string name="login_user_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_remember_user">Remember me</string>
    <string name="login_button">Login</string>
    <string name="login_disclaimer">This application is not affiliated with Focus School Software LLC.</string>
    <string name="language_alert_title">Language set incorrectly</string>
    <string name="language_alert_message">This application requires that your language be set to "English" in the Focus preferences. Would you like to automatically set the language now?</string>
    <string name="language_alert_positive">OK, change my language</string>
    <string name="language_alert_negative">Cancel</string>
    <string name="login_language_change_progress">Changing Language…</string>
    <string name="login_blank_username_error">Username cannot be blank</string>
    <string name="login_blank_password_error">Password cannot be blank</string>
    <string name="login_asd_notice_title">Important Notice</string>
    <string name="login_asd_notice_message">This app was created for the Academy for Science and Design. If you are not a student at this school, the app will not work for you. Sorry for the inconvenience!</string>
    <string name="login_asd_notice_negative">Close</string>
    <string name="login_asd_notice_positive">I understand</string>
    <string name="login_asd_notice_positive_with_time">I Understand (%1$d)</string>
    <string-array name="portal_tab_names">
        <item>Courses</item>
        <item>Events</item>
        <item>Assignments</item>
    </string-array>
    <string name="portal_empty_fragment">Whoops, looks like there isn\'t anything here!</string>
    <string name="portal_action_export">Export</string>
    <string name="portal_get_assignment_descriptions_progress">Downloading courses to find assignment descriptions…</string>
    <string name="assignment_name_header">Assignment</string>
    <string name="assignment_points_header">Points</string>
    <string name="assignment_grade_header">Grade</string>
    <string name="assignment_assigned_header">Assigned</string>
    <string name="assignment_due_header">Due</string>
    <string name="assignment_category_header">Category</string>
    <string name="assignment_add_new_title">Add new assignment</string>
    <string name="assignment_edit_title">Edit assignment</string>
    <string name="assignment_add_new_name_hint">Name</string>
    <string name="assignment_add_new_name_empty">Name cannot be empty</string>
    <string name="assignment_add_new_due">Due:</string>
    <string name="assignment_add_new_due_hint">mm/dd/yy</string>
    <string name="assignment_add_new_due_invalid">Invalid date</string>
    <string name="assignment_add_new_due_empty">Due cannot be empty</string>
    <string name="assignment_add_new_category">Category:</string>
    <string name="assignment_add_new_description_hint">Description</string>
    <string name="assignment_add_new_positive_button">Add</string>
    <string name="assignment_add_new_update_button">Update</string>
    <string name="assignment_menu_edit">Edit assignment</string>
    <string name="assignment_menu_delete">Delete assignment</string>
    <string name="assignment_menu_reset">Reset assignment</string>
    <string name="assignment_dialog_edit">Edit</string>
    <string name="assignment_dialog_reset">Reset</string>
    <string name="assignment_dialog_delete">Delete</string>
    <string-array name="schedule_tab_names">
        <item>Courses</item>
        <item>School</item>
    </string-array>
    <string name="course_name_header">Course</string>
    <string name="course_period_header">Period</string>
    <string name="course_teacher_header">Teacher</string>
    <string name="course_days_header">Meeting Days</string>
    <string name="course_room_header">Room</string>
    <string name="course_term_header">Term</string>
    <string name="map_search_hint">Search for a room # or teacher</string>
    <string name="map_search_error">Room or teacher could not be found</string>
    <string name="pinch_to_zoom">Pinch to zoom</string>
    <string name="bell_schedule">Bell Schedule</string>
    <string-array name="asd_bell_schedule_type">
        <item>Grades 7–12</item>
        <item>Grade 6</item>
        <item>Grades 7–12 Delay</item>
        <item>Grade 6 Delay</item>
        <item>SPARK</item>
    </string-array>
    <string name="calendar_hint">Tap a day on the calendar to see events and assignments</string>
    <string name="calendar_assignment_header">Assignments</string>
    <string name="calendar_event_header">Events</string>
    <string name="calendar_event_dialog_button">OK</string>
    <string name="calendar_event_date">Date</string>
    <string name="calendar_event_teacher">Teacher</string>
    <string name="calendar_event_course_name">Course</string>
    <string name="calendar_event_section">Section</string>
    <string name="calendar_event_school">School</string>
    <string name="calendar_event_notes">Notes</string>
    <string name="calendar_event_dialog_export">Export</string>
    <string name="calendar_event_dialog_export_wait">Please wait for the event details to load before exporting</string>
    <string name="calendar_sync_dialog_from">From:</string>
    <string name="calendar_sync_dialog_to">To:</string>
    <string name="calendar_sync_dialog_date_error">From date must be before to date</string>
    <string name="calendar_sync_calendars_progress">Downloading calendars…</string>
    <string name="calendar_sync_assignments_progress">Downloading assignment details…</string>
    <string name="demographic_name_hint">Name</string>
    <string name="demographic_dob_hint">Birthdate</string>
    <string name="demographic_email_hint">Email</string>
    <string name="demographic_gender_hint">Gender</string>
    <string name="demographic_grade_hint">Grade</string>
    <string name="demographic_bus_multiple_hint">Bus (Arrival/Dismissal)</string>
    <string name="demographic_bus_single_hint">Bus</string>
    <string name="demographic_unassigned">Unassigned</string>
    <string name="demographic_student_id_hint">Student ID</string>
    <string name="demographic_cumulative_file_hint">Has cumulative file</string>
    <string name="demographic_photo_auth_hint">Photo usage authorized</string>
    <string name="demographic_medical_hint">Medical record status</string>
    <string name="demographic_locker_hint">Locker</string>
    <string name="address_phone_hint">Phone</string>
    <string name="address_contact_address_hint">Address</string>
    <string name="address_contact_email_hint">Email</string>
    <string name="address_contact_relationship_hint">Relationship</string>
    <string name="address_contact_custody_hint">Custody</string>
    <string name="address_contact_emergency_hint">Emergency contact</string>
    <string name="address_contact_name_hint">Name</string>
    <string name="address_contact_details_hint">Additional details</string>
    <string name="address_contact_title">Contact</string>
    <string name="referrals_violation_header">Violation</string>
    <string name="referrals_entry_date_header">Entry Date</string>
    <string name="referrals_name_header">Reporter</string>
    <string name="absences_days_possible">Total Full Days Possible</string>
    <string name="absences_days_attended">Total Full Days Attended</string>
    <string name="absences_days_absent">Total Full Days Absent</string>
    <string name="absences_absent_header">&lt;b>Absent: &lt;/b> %1$d periods (during %2$d days)</string>
    <string name="absences_absent">&#160;Absent: %1$d periods</string>
    <string name="absences_excused">&#160;Excused Absence: %1$d periods - &lt;b>%2$d days&lt;/b></string>
    <string name="absences_other_marks">&lt;b>Other Marks: &lt;/b>%1$d periods (during %2$d days)</string>
    <string name="absences_late">&#160;Late: %1$d periods</string>
    <string name="absences_tardy">&#160;Tardy: %1$d periods</string>
    <string name="absences_misc">&#160;Misc. Activity: %1$d periods</string>
    <string name="absences_offsite">&#160;Off Site/Field Trip: %1$d periods</string>
    <string name="absences_date_header">Date</string>
    <string name="absences_daily_header">Overall Daily Status</string>
    <string name="absences_table_header">Days with Absences</string>
    <string name="finalgrades_final_grades">Final Grades</string>
    <string name="finalgrades_all_sem_final_grades">All Semester Final Grades</string>
    <string name="finalgrades_all_sem_final_exam_grades">All Semester Final Exam Grades</string>
    <string name="finalgrades_current_sem_final_grades">%1$s Final Grades</string>
    <string name="finalgrades_current_sem_final_exam_grades">%1$s Final Exam Grades</string>
    <string name="finalgrades_gpa">&lt;b>Cumulative GPA:&lt;b/> %1$s</string>
    <string name="finalgrades_weighted_gpa">&lt;b>Cumulative Weighted GPA:&lt;b/> %1$s</string>
    <string name="finalgrades_credits_earned">&lt;b>Credits Earned:&lt;b/> %1$s</string>
    <string name="finalgrades_course_history">Course History</string>
    <string name="finalgrades_all_semesters">All Semesters</string>
    <string name="finalgrades_all_semesters_exams">All Semester Exams</string>
    <string name="finalgrades_year_header">Year</string>
    <string name="finalgrades_mp_header">MP</string>
    <string name="finalgrades_course_header">Course Title</string>
    <string name="finalgrades_grade_header">Grade</string>
    <string name="finalgrades_comment_codes_link">View comment codes</string>
    <string name="finalgrades_comment_codes_dialog_title">Comment Codes</string>
    <string name="settings_title_general">General</string>
    <string name="settings_title_account">Account</string>
    <string name="settings_automatic_login_title">Sign in automatically</string>
    <string name="settings_automatic_login_summary">Automatically log in when the app starts</string>
    <string name="settings_always_check_preferences_title">Always check language on login</string>
    <string name="settings_always_check_preferences_summary">Prevents crashes if your language is set incorrectly on Focus, but can make logging in slightly slower</string>
    <string name="settings_username_title">Username</string>
    <string name="settings_change_password_title">Change password</string>
</resources>