<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory-->
        <!--android:title="@string/settings_title_general">-->

        <!--<Preference-->
            <!--android:key="date_format"-->
            <!--android:title="@string/settings_date_format_title"/>-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/settings_title_general">

        <CheckBoxPreference
            android:key="automatic_login"
            android:title="@string/settings_automatic_login_title"
            android:summary="@string/settings_automatic_login_summary"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="always_check_preferences"
            android:title="@string/settings_always_check_preferences_title"
            android:summary="@string/settings_always_check_preferences_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_title_account">

        <Preference
            android:key="username_display"
            android:title="@string/settings_username_title"/>

        <com.slensky.focussis.views.PasswordChangePreference
            android:key="password_change"
            android:title="@string/settings_change_password_title" />


    </PreferenceCategory>

    <!--<PreferenceCategory-->
    <!--android:title="@string/title_second_section">-->

    <!--<ListPreference-->
    <!--android:key="list_preference"-->
    <!--android:title="@string/title_list_preference"-->
    <!--android:dialogTitle="@string/dialog_title_list_preference"-->
    <!--android:entries="@array/entries_list_preference"-->
    <!--android:entryValues="@array/entryvalues_list_preference" />-->

    <!--<Preference-->
    <!--android:title="@string/title_intent_preference">-->
    <!--<intent android:action="android.intent.action.VIEW"-->
    <!--android:data="http://codepath.com/" />-->
    <!--</Preference>-->

    <!--</PreferenceCategory>-->

</PreferenceScreen>