<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync_to_calendar"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_sync_to_calendar"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_saved_assignments"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_delete_saved_assignments"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_logout"
        app:showAsAction="never" />
</menu>