<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        xmlns:custom="http://schemas.android.com/apk/res/com.slensky.focussis"
        android:id="@+id/ll_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_contact_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="4dp"
                style="@style/primarySubheadingText" />

            <com.slensky.focussis.views.IconWithTextView
                android:id="@+id/view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon="@drawable/ic_person_black_24px"
                custom:hint="@string/address_contact_name_hint"/>

        </LinearLayout>


        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_account_multiple_black_24px"
            custom:hint="@string/address_contact_relationship_hint"/>

        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_custody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_gavel_black_24px"
            custom:hint="@string/address_contact_custody_hint"/>

        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_warning_black_24px"
            custom:hint="@string/address_contact_emergency_hint"/>

        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_home_black_24px"
            custom:hint="@string/address_contact_address_hint"/>

        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_phone_black_24px"
            custom:hint="@string/address_phone_hint"/>

        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_email_black_24px"
            custom:hint="@string/address_contact_email_hint"/>

        <com.slensky.focussis.views.IconWithTextView
            android:id="@+id/view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:icon="@drawable/ic_information_outline_black_24px"
            custom:hint="@string/address_contact_details_hint"/>

    </LinearLayout>

</android.support.v7.widget.CardView>