<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_basic"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    xmlns:custom="http://schemas.android.com/apk/res/com.slensky.focussis"
                    android:id="@+id/ll_basic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:showDividers="middle"
                    android:divider="@drawable/divider">

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:icon="@drawable/ic_person_black_24px"
                        custom:hint="@string/demographic_name_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:icon="@drawable/ic_cake_variant_black_24px"
                        custom:hint="@string/demographic_dob_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:icon="@drawable/ic_email_black_24px"
                        custom:hint="@string/demographic_email_hint"/>-->

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:icon="@drawable/ic_gender_male_female_black_24px"
                        custom:hint="@string/demographic_gender_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:icon="@drawable/ic_calendar_text_black_24px"
                        custom:hint="@string/demographic_grade_hint"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_detailed"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    xmlns:custom="http://schemas.android.com/apk/res/com.slensky.focussis"
                    android:id="@+id/ll_detailed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:showDividers="middle"
                    android:divider="@drawable/divider">

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_bus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_directions_bus_black_24px"
                        app:hint="@string/demographic_bus_multiple_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_locker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_locker_multiple_black_24px"
                        app:hint="@string/demographic_locker_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_medical_record_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_medical_bag_black_24px"
                        app:hint="@string/demographic_medical_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_photo_auth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_camera_black_24px"
                        app:hint="@string/demographic_photo_auth_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_cumulative_file"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_clipboard_text_black_24px"
                        app:hint="@string/demographic_cumulative_file_hint"/>

                    <com.slensky.focussis.views.IconWithTextView
                        android:id="@+id/view_student_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_account_card_details_black_24px"
                        app:hint="@string/demographic_student_id_hint"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>